crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N802_N802.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N802 Function name `stillBad` should be lowercase
 --> N802.py:6:5
  |
4 |     pass
5 |
6 | def stillBad():
  |     ^^^^^^^^
7 |     pass

N802 Function name `stillBad` should be lowercase
  --> N802.py:13:9
   |
11 |         return super().tearDown()
12 |
13 |     def stillBad(self):
   |         ^^^^^^^^
14 |         return super().tearDown()
help: Consider adding `@typing.override` if this method overrides a method from a superclass
