crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N803_N803.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N803 Argument name `stillBad` should be lowercase
 --> N803.py:4:16
  |
2 |     return _, a, badAllowed
3 |
4 | def func(_, a, stillBad):
  |                ^^^^^^^^
5 |     return _, a, stillBad

N803 Argument name `stillBad` should be lowercase
  --> N803.py:11:28
   |
 9 |         return _, a, badAllowed
10 |
11 |     def method(self, _, a, stillBad):
   |                            ^^^^^^^^
12 |         return _, a, stillBad
