crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N806_N806.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N806 Variable `stillBad` in function should be lowercase
 --> N806.py:3:5
  |
1 | def assign():
2 |     badAllowed = 0
3 |     stillBad = 0
  |     ^^^^^^^^
4 |
5 |     BAD_ALLOWED = 0

N806 Variable `STILL_BAD` in function should be lowercase
 --> N806.py:6:5
5 |     BAD_ALLOWED = 0
6 |     STILL_BAD = 0
  |     ^^^^^^^^^
